Corrected tests after adding validation. Added messages.properties to add some manuel validation descriptions. Added validation to form.html

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		</dependency>
 
 		<dependency>
-			<!-- After going back to community version of Intellij from Ultimate edition, Lombok version made Maven give out errors. -->
+			<!-- After going back to community version of Intellij from Ultimate edition, Lombok version cause Maven to give out errors. -->
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.24</version>
