--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 server.error.include-stacktrace=never
+spring.logging.level.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.datasource.url=jdbc:mysql://localhost:3306/recipe
+spring.datasource.username=dummyuser
+spring.datasource.password=dummypassword
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
