--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       #- image: circleci/openjdk:8-jdk
-      - image: circleci/openjdk:21-browsers-legacy
+      - image: cimg/openjdk:21.0.2
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
