--- a/pom.xml
+++ b/pom.xml
@@ -96,10 +96,6 @@
 					<includes>
 						<include>**/*IT.java</include>
 					</includes>
-					<excludes>
-						<exclude>**/RecipeRepositoryTest.java</exclude>
-						<exclude>**/UnitOfMeasureRepositoryTest.java</exclude>
-					</excludes>
 				</configuration>
 				<executions>
 					<execution>
@@ -109,6 +105,16 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/RecipeRepositoryTest.java</exclude>
+						<exclude>**/UnitOfMeasureRepositoryTest.java</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
