Added footer and Header, Fixed some stuff. Added an empty file to gitignore to see how it works. I may later try to update the file and see if it gets updated in the github repository. Added ReadME.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=dummypassword
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+#For handling errors
+server.error.path=/error
